## Makefile.am -- Process this file with automake to produce Makefile.in
bin_PROGRAMS = sumtree
sumtree_SOURCES = mfcalc.yy BoxShape.cpp CircleShape.h EllipseShape.cpp Layout.h ShapeLocation.h stdint.h SumNodeExpanderVisitor.h SumParser.h BoxShape.h EllipseShape.h NodeDiminsionVisitor.cpp SumNode.h wstringconvert.cpp CalculatorDialog.cpp CountedPtr.h Gui.cpp NodeDiminsionVisitor.h SumNodeVisitor.cpp wstringconvert.h CalculatorDialog.h CurrentSumVisitor.cpp Gui.h NodeLocations.cpp StaticText.cpp SumNode.cpp SumNodeVisitor.h CircleShape.cpp CurrentSumVisitor.h Layout.cpp NodeLocations.h StaticText.h SumNodeExpanderVisitor.cpp SumParser.cpp 

INCLUDES = -DPKG_DATA_DIR=\"$(pkgdatadir)\"
